fix:修复已知bug;perf:优化QueryRainWaterData接口返参及校验